--- a/Style/main.css
+++ b/Style/main.css
@@ -1,101 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-
-  line-height: 1.5;
-  height: 100vh;
-  position: relative;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  background-color: #fff;
-}
-
-.show-modal {
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 1.75rem 3.5rem;
-  margin: auto;
-  border: none;
-  background-color: #3a75b4;
-  color: #fff;
-  border-radius: 10rem;
-  cursor: pointer;
-}
-.text {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-h5 {
-  font-size: 1rem;
-  font-family: sans-serif;
-  color: #3a75b4;
-}
-
-.close-modal {
-  position: absolute;
-  top: 1.2rem;
-  right: 2rem;
-  font-size: 5rem;
-  color: #333;
-  cursor: pointer;
-  border: none;
-}
-
-h1 {
-  font-size: 3rem;
-  color: #fff;
-  margin-bottom: 2rem;
-  text-align: center;
-}
-
-p {
-  font-size: 1.8rem;
-}
-
-/* -------------------------- */
-/* CLASSES TO MAKE MODAL WORK */
-/* .hidden {
-  display: none;
-} */
-
-/* .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 70%;
-  background: linear-gradient(to right left, #3a75b4 #3074be);
-  padding: 6rem;
-  border-radius: 5px;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  z-index: 10;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(3px);
-  z-index: 5;
-} */
-
 * {
   margin: 0;
   padding: 0;
@@ -190,15 +92,16 @@ p {
   align-items: center;
   justify-content: start;
   gap: 2px;
+  cursor: pointer;
 }
 .btn button {
   color: #fff;
-  background: linear-gradient(to bottom right, #2624c5, #6d8adb);
   border: 1px solid #fff;
   padding: 15px 35px 15px 20px;
   border-radius: 20px;
   font-family: sans-serif;
-  letter-spacing: 4px;
+  letter-spacing: 2px;
+  background: local;
 }
 a i {
   color: #fff;
